# diff-match-patch

.github/workflows/: clang-format.yml  cpp.yaml
cpp/: .clang-format  CMakeLists.txt  diff_match_patch.cpp  diff_match_patch.h  diff_match_patch.pro  diff_match_patch_test.cpp  diff_match_patch_test.h
